# ipl-player-availability

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: AGENTS.md  architecture_review.md
scripts/: init_db.py
src/player_availability/: __main__.py  config.py  exceptions.py  logging.py
src/player_availability/collectors/: __init__.py  base.py  espn_cricinfo.py  exceptions.py  generic_rss.py  http_client.py  ipl_official.py  mock.py  rss_utils.py
src/player_availability/db/: models.py  repository.py  resolver.py  seed.py  session.py
src/player_availability/domain/: enums.py  events.py
src/player_availability/normalizers/: __init__.py  alias_registry.py  base.py  deduplication.py  default_normalizer.py  exceptions.py  mapper.py  models.py  player.py  resolver.py  team.py  utils.py
src/player_availability/parsers/: __init__.py  article_parser.py  base.py  espn_cricinfo.py  exceptions.py  ipl_official.py  mock.py  patterns.py  rule_engine.py  utils.py
src/player_availability/pipeline/: availability_pipeline.py
tests/: conftest.py
tests/integration/test_pipeline/: test_availability_pipeline.py
tests/unit/: test_sync_validation.py
tests/unit/test_collectors/: test_espn_cricinfo.py  test_generic_rss.py  test_http_client.py  test_ipl_official.py  test_mock.py  test_rss_utils.py
tests/unit/test_db/: test_repository.py  test_resolver.py  test_seed.py
tests/unit/test_domain/: test_enums.py  test_events.py
tests/unit/test_normalizers/: test_alias_registry.py  test_deduplication.py  test_default_normalizer.py  test_mapper.py  (+4 more)
(+3 files in other folders)
