[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "player-availability"
version = "0.1.0"
description = "Component 7 - Player Availability Service for IPL Championship Prediction System"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "loguru>=0.7,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4,<1",
]

[tool.setuptools.package-dir]
player_availability = "src/player_availability"

[tool.setuptools.packages.find]
where = ["src"]
include = ["player_availability*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
